--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -269,7 +269,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   padding: 10px 10px 10px 15px;
 }
 .mini-navbar .nav .nav-second-level {
-  position: absolute;
+  /* position: absolute; */
   left: 70px;
   top: 0;
   background-color: #2f4050;
