--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -27,4 +27,5 @@
 	    min-width: 210px;
 	}
 }
+#download_file{ margin-bottom:10px; }
 .b-info{background-color:#21b9bb!important;color:#fff!important;}
